# theone

./: .gitignore  DEVELOPMENT.md  DRISTHI_PROJECT_BLUEPRINT.md  INDEPTH_REPORT_GEMINI.md  INDEPTH_REPORT_GPT.md  PROJECT_STATUS.md  Procfile  QODER_CHANGES_DONE.md  README.md  TASKS.md  VERCEL_DEPLOYMENT_GUIDE.md  plan.txt  plan2.txt  render.yaml  requirements.txt  setup.py
.github/workflows/: ci.yml
app/: __init__.py
backend/: .vercelignore  Dockerfile  README.md  alembic.ini  conftest.py  entrypoint.sh  env.example  pyproject.toml  pytest.ini  requirements.txt  requirements_from_old_venv.txt  uvicorn.err  uvicorn_8001.err  uvicorn_debug.err
backend/.venv311/: pyvenv.cfg
backend/.venv311/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
backend/alembic/: env.py
backend/alembic/versions/: 04aa8b881b32_create_all_tables.py  20250922_add_usermemory_vector_id.py  20250922_add_usermemory_vector_id.py.bak  20250922_usermem_vec_add_usermemory_vector_id.py  20250927_add_assistant_fields_to_user.py  20250927_add_learningpath_items.py  20251002_add_journal_tables.py  4e359f91e3e9_merge_learningpath_and_journal_heads.py  5a3c2129f802_add_vector_id_to_usermemory.py  7102fdaf7caa_add_estimated_minutes_to_task_and_start_.py  9e6bc9cb8105_initial_migration_create_all_tables.py  a1b2c3d4e5f6_split_achievement_changes.py  bc1d2e3f4g5_split_moodlog_changes.py  cd4e5f6g7h8_split_badge_changes.py  d3f1a9b2c8e4_merge_usermemory_vector_id.py  d3f1a9b2c8e4_merge_usermemory_vector_id.py.bak  ef5g6h7i8j9_split_conversation_changes.py  gh6h7i8j9k0_split_embedding_changes.py  ij7k8l9m0n1_split_calendarevent_changes.py  kl8m9n0o1p2_split_user_tables.py  make_career_category_nullable.py  mn9o0p1q2r3_split_conversation_additional_fields.py
backend/app/: __init__.py  celery.py  main.py
backend/app/core/: config.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: __init__.py  career.py  finance.py  gamification.py  habits.py  journal.py  memory.py  mini_assistant.py  mood.py  user.py
backend/app/routers/: ai.py  auth.py  career.py  compatibility.py  debug.py  demo_auth.py  demo_seed.py  finance.py  gamification.py  habits.py  journal.py  memory.py  mini_assistant.py  mocks_core.py  mood.py  opportunities.py  users.py
backend/app/schemas/: career.py  mini_assistant.py  user.py
backend/app/services/: __init__.py  ai_service.py  career_service.py  memory_service.py
backend/app/tasks/: ai_insights.py  data_cleanup.py  finance_alerts.py  habit_reminders.py  motivation_messages.py
backend/app/tests/: test_career_integration.py  test_career_roadmap.py  test_e2e_happy_path.py  test_healthz.py  test_memory_faiss.py  test_unit_services.py
backend/app/utils/: jwt.py  logger.py  security.py  tracing.py
backend/data/: faiss_index
backend/tools/: check_career_category_nullable.py  check_llm.py  check_seed.py  create_tables_quick.py  endpoint_checker.py  ensure_career_category_nullable.py  fix_moodlog_columns.py  get_seeded_user_counts.py  list_seeded_users.py  probe_career_goal.py  probe_health.py  seed_demo_user.py  seed_faiss_index.py  smoke_endpoints.py  smoke_report.json  test_career_flow.py  test_gemini_invoke.py
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  ENVIRONMENT_CONFIGURATIONS.md  GENAI_HACKATHON_95_PLAN.md  GENAI_HACKATHON_REPORT.md  SQLITE_MIGRATIONS.md
frontend/: .env.example  .vercelignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  site.webmanifest  tailwind.config.js  vercel.json  vite.config.js
frontend/public/: manifest.json  site.webmanifest
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: ai.js  auth.js  career.js  client.js  config.js  finance.js  gamification.js  habits.js  index.js  journal.js  memory.js  miniAssistant.js  mockData.js  mood.js  opportunities.js  status.js  users.js
infra/: docker-compose.yml  init-db.sql  prometheus.yml
infra/grafana/: dashboard.json
tools/: check_endpoints.py  compare_endpoints.py  endpoint_compare_report.json  generate_requirements_from_sitepackages.py
(+44 files in other folders)
